# computer_graphics

lighting/: CMakeLists.txt  CMakePresets.json
lighting/.cph/: .D_Sum.py_5b060f676318e01ca0b76e628a5f4d9f.prob
lighting/include/: camera.h  cube.h  shader.h
lighting/include/glad/: gl.h
lighting/shaders/: fragment_shader.fs  light_vertex_shader.vs
lighting/src/: main.cpp
model_loading/: CMakeLists.txt
model_loading/include/: camera.h  cube.h  light.h  shader.h  texture.h
model_loading/include/glad/: glad.h
model_loading/shaders/: model_loading.fs  model_loading.vs  model_loading_light.fs  model_loading_light.vs
model_loading/src/: glad.c  main.cpp
